gh-69: removed language from association
